@@ -23,6 +23,7 @@
  - Allow loading empty text events [691191].
  - Fixed xtext race condition [678874].
  - Added ability to show/hide the channel-mode buttons.
+ - Use the network name in server-tab rather than full hostname.
  - 
  - 
  - 
